# Lyrica

./: Cargo.toml  README.md
src/: component.rs  config.rs  db.rs  dlp.rs  file_system.rs  loading_screen.rs  main.rs  main_screen.rs  playlist_icon.rs  screen.rs  screens.rs  search_util.rs  sync.rs  tabs.rs  theme.rs  util.rs  wait_screen.rs
src/screens/: file_system.rs  loading_screen.rs  main_screen.rs  search_util.rs  wait_screen.rs
src/screens/main_screen/: util.rs
src/sync/: audio_file_info.rs  downloader.rs  manager.rs  sync_util.rs
