[package]
name = "lyrica"
version = "0.1.0"
edition = "2021"
license = "AGPLv3"
authors = ["Michael Wain <alterwain@protonmail.com>"]

[dependencies]
chrono = "0.4.39"
rusb = "0.9.4"
dirs = "6.0.0"
toml = "0.8.20"
serde = "1.0.217"
serde_json = "1.0"
bincode = "1.3.3"
regex = "1.11.1"
libmath = "0.2.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
strum = { version = "0.27", features = ["derive"] }
soundcloud = { version = "0.1.4", git = "https://gitea.awain.net/alterwain/soundcloud_api.git" }
itunesdb = { version = "0.1.1", git = "https://gitea.awain.net/alterwain/ITunesDB.git" }
ureq = "3.0.5"
color-thief = "0.2"
redb = "2.4.0"
md-5 = "0.10.6"
base64 = "0.22.1"
puremp3 = "0.1.0"
